Create layouts for filter and list of users

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -6,8 +6,8 @@
 
     "inputName": "Name",
     "inputGenger": "Gender",
-    "inputAgeFrom": "from",
-    "inputAgeTo": "to",
+    "inputAgeFrom": "From",
+    "inputAgeTo": "To",
 
     "genderMale": "Male",
     "genderFemale": "Female",
